--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />-->
     <title>Food Bank App</title>
   </head>
   <body>
     <div id="root"></div>
-   
   </body>
 </html>
